ex5/testdata/typechecker/error/NonexistingField.java
class Wuff {
    public static void main(String[] args) {
        int x;
        x = new A().x;
    }
}

class A {
    int y;
}